title position absolute to prevent shifting when streak is in double or triple digits

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -15,9 +15,12 @@
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 
   @include atSmall {
-    margin-left: 0;
-    text-align: center;
+    position: absolute;
+    margin: 0;
+    left: 50%;
+    transform: translate(-50%);
     font-size: 140%;
+    z-index: 10;
   }
 
   @include atMedium {
